@@ -1,5 +1,6 @@
 0.19
     - Move File::Slurp from 'requires' to 'test_requires'
+    - Make the default pragma logic a bit simpler
 
 0.18 Fri Feb 26 05:02:17 GMT 2010
 
